--- a/style.css
+++ b/style.css
@@ -1715,9 +1715,10 @@ a.phone-button:focus,
 	grid-column: 7/span 3;
 	grid-row: 1/span 2;
 	display: grid;
-	grid-template-columns: 1fr 80px 1fr;
+	grid-template-columns: auto auto;
 	grid-template-rows: auto auto;
-	gap: 0;
+	column-gap: 80px;
+	row-gap: 0;
 	align-items: start;
 }
 
@@ -1760,7 +1761,7 @@ a.phone-button:focus,
 }
 
 .footer-services-list-right {
-	grid-column: 3;
+	grid-column: 2;
 	grid-row: 2;
 }
 
